# windows-firewall-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/: release.yml
.github/workflows/: auto-release.yml  ci.yml  codecov.yml  release.yml
src/: constants.rs  errors.rs  firewall_enums.rs  firewall_rule.rs  lib.rs  net_address.rs  profile.rs  rule_ops.rs  rules_list.rs  utils.rs  windows_firewall.rs
src/firewall_rule/: firewall_address.rs  firewall_port.rs  operations.rs  types.rs
src/firewall_rule/types/: action.rs  address.rs  direction.rs  interface_type.rs  profile.rs  protocol.rs
src/utils/: bstr.rs  com.rs  variant.rs
tests/: firewall_state_tests.rs  rules_list_tests.rs  rules_test.rs  rules_tests.rs  tests.rs
tests/helpers/: auto_remove_firewall_rule.rs  build.rs  constants.rs  mod.rs  utils.rs
