[package]
name = "windows_firewall"
authors = ["lhenry-dev <lhenry.dev1@gmail.com>"]
version = "0.3.0"
edition = "2021"
rust-version = "1.82"
description = "A crate for managing Windows Firewall rules and settings."
license = "MIT/Apache-2.0"
keywords = ["windows", "ffi", "win32", "com", "firewall"]
categories = ["external-ffi-bindings", "os::windows-apis"]
readme = "README.md"
repository = "https://github.com/lhenry-dev/windows-firewall-rs"
documentation = "https://docs.rs/windows_firewall/latest/windows_firewall/"
homepage = "https://crates.io/crates/windows_firewall"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]

[dependencies]
scopeguard = "1.2.0"
thiserror = "2.0.16"
tracing = "0.1.41"
typed-builder = "0.22.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_System_Com",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
windows-result = "0.4.0"

[dev-dependencies]
ipconfig = "0.3.2"
serial_test = "3.2.0"
